cmake_minimum_required(VERSION 3.29)
project(untitled17)

set(CMAKE_CXX_STANDARD 20)

add_executable(untitled17 main.cpp
        ejercicio1/ejercicio2/ejercicio3/ejercicio4/ejercicio5/main5.cpp
        ejercicio1/main1.cpp
        ejercicio1/ejercicio2/main2.cpp
        ejercicio1/ejercicio2/ejercicio3/main3.cpp)